[project]
name = "firecrawl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beam-client>=0.2.175",
    "firecrawl-py>=2.4.1",
    "ipykernel>=6.30.1",
    "ipython>=9.2.0",
    "litellm>=1.63.8",
    "llama-index>=0.11.0",
    "llama-index-embeddings-fastembed>=0.3.1",
    "llama-index-llms-litellm>=0.5.1",
    "llama-index-llms-lmstudio>=0.3.0",
    "llama-index-llms-ollama>=0.6.2",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-readers-web>=0.3.9",
    "llama-index-vector-stores-milvus>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "lmstudio>=1.3.0",
    "openai>=1.99.0",
    "qdrant-client>=1.14.2",
    "streamlit>=1.44.1",
]
